# poetry-quickstart-cookiecutter

./: NOTES.md  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.directory_name}}/: .behaverc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.directory_name}}/.github/workflows/: python-lint.yml  python-publish.yml  python-test.yml
{{cookiecutter.directory_name}}/scripts/: post-commit  save.sh
{{cookiecutter.directory_name}}/src/{{cookiecutter.project_name}}/: {{cookiecutter.project_name}}.py
{{cookiecutter.directory_name}}/test/: test_unit.py
{{cookiecutter.directory_name}}/test/bdd/features/: behavior.feature
{{cookiecutter.directory_name}}/test/bdd/features/steps/: test_bdd_steps.py
